Updated packages to latest on net8.0, updated tasks tags, cleaned up code

--- a/AntiqueBookstore/Views/Books/Create.cshtml
+++ b/AntiqueBookstore/Views/Books/Create.cshtml
@@ -120,13 +120,13 @@
         <h5>[INFO] Considerations</h5>
         <hr />
         <p>
-            <strong>Book Title:</strong> Please enter carefuly bla bla bla. 
+            <strong>Book Title:</strong> Please enter info carefuly. 
         </p>
         <p>
-            <strong>Publisher:</strong> The concept of publishing house bla bla.
+            <strong>Publisher:</strong> The concept of publishing house is..
         </p>
         <p>
-            <strong>Dates:</strong> Most of the date a book was published can be bla bla.
+            <strong>Dates:</strong> The date a book was published can be..
         </p>
         <p>
             <strong>Cover:</strong> Upload a clear image of a book cover (JPG, PNG, GIF format, max 5MB).
@@ -135,7 +135,6 @@
     </div>
 
 </div>
-
 <hr />
 
 @* TODO: Bootstrap Modal window AJAX *@
@@ -163,7 +162,6 @@
         </div>
     </div>
 </div>
-
 
 @section Scripts {
     @{
@@ -234,7 +232,7 @@
 
                         } else {
                             // Error: server validation or other
-                            var errorMessage = "An error occurred.";
+                            var errorMessage = "Error occurred.";
                             
                             if (response.errors && response.errors.length > 0) {
                                 errorMessage = response.errors.join('<br>');
