--- a/AntiqueBookstore/Views/Books/Edit.cshtml
+++ b/AntiqueBookstore/Views/Books/Edit.cshtml
@@ -8,7 +8,6 @@
     ViewData["Title"] = "Edit Book";
 }
 
-
 <h1>Edit</h1>
 
 <h4>Book</h4>
@@ -107,5 +106,5 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    @* Можно добавить скрипты для улучшения UX выбора авторов (например, Select2) *@
+    @* Scripts can be added to improve UX for Author selection (e.g. Select2) *@
 }
