--- a/AntiqueBookstore/Views/Employees/Details.cshtml
+++ b/AntiqueBookstore/Views/Employees/Details.cshtml
@@ -13,7 +13,7 @@
 <h4>@Model.FirstName @Model.LastName</h4>
 <hr />
 
-@* Display the employee's current position *@
+@* Display the Employee current position *@
 <div>
     <dl class="row">
         @* Description List to display fields *@
@@ -47,7 +47,7 @@
 </div>
 <hr />
 
-@* Display the employee's position history *@
+@* Display Employee position history *@
 <div class="mt-4">
     <h5>@Html.DisplayNameFor(model => model.PositionHistory)</h5>
 
@@ -98,4 +98,3 @@
 
     <a asp-action="Index">Back to List</a> 
 </div>
-
