--- a/AntiqueBookstore/Views/Employees/Index.cshtml
+++ b/AntiqueBookstore/Views/Employees/Index.cshtml
@@ -4,7 +4,7 @@
 
 @model IEnumerable<AntiqueBookstore.Models.EmployeeIndexViewModel>
 
-@* intentionally breaking SoC pattern by ViewData *@
+@* Intentionally breaking SoC pattern by ViewData *@
 @using AntiqueBookstore.Domain.Entities 
 
 @{
