--- a/AntiqueBookstore/Views/UserManagement/Index.cshtml
+++ b/AntiqueBookstore/Views/UserManagement/Index.cshtml
@@ -35,7 +35,6 @@
     </div>
 }
 
-
 <h2>@ViewData["Title"]</h2>
 <hr />
 
@@ -43,7 +42,7 @@
 
 @Html.AntiForgeryToken() @* CSRF for JS *@
 
-@* INFO: Block with information about Roles/Levels, like in Employees/Index *@
+@* Block with information about Roles/Levels, like in Employees/Index *@
 @*
 <div class="row mb-4">
     <div class="col-md-6">
@@ -174,8 +173,6 @@
     </div>
 </div>
 
-
-
 @section Scripts {
 
     <script>
@@ -207,4 +204,3 @@
         }
     </script>
 }
-
