Unified design style for all Views, added Books filter

--- a/AntiqueBookstore/Views/Authors/Create.cshtml
+++ b/AntiqueBookstore/Views/Authors/Create.cshtml
@@ -8,6 +8,20 @@
     ViewData["Title"] = "Create Author";
 }
 
+@* TempData messages *@
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-warning" role="alert">
+        @TempData["ErrorMessage"]
+    </div>
+}
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["SuccessMessage"]
+    </div>
+}
+
 <h1>Create Author</h1>
 
 <h4>Author</h4>
@@ -89,7 +103,7 @@
 
 <hr />
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
 
 @* Connect validation script on client side *@
