--- a/AntiqueBookstore/Views/Authors/Edit.cshtml
+++ b/AntiqueBookstore/Views/Authors/Edit.cshtml
@@ -8,6 +8,19 @@
     ViewData["Title"] = "Edit Author";
 }
 
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @TempData["ErrorMessage"]
+    </div>
+}
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["SuccessMessage"]
+    </div>
+}
+
 <h1>Edit Author</h1>
 
 <h4>Author</h4>
@@ -72,7 +85,7 @@
 
 <hr />
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
 
 @section Scripts {
