--- a/AntiqueBookstore/Views/Authors/Details.cshtml
+++ b/AntiqueBookstore/Views/Authors/Details.cshtml
@@ -46,13 +46,11 @@
             @Html.DisplayFor(model => model.Bio)
         </dd>
     </dl>
+    <hr />
 
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary" title="Edit Author">Edit</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-danger">Delete</a>
     </div>
 </div>
-
-
-
-
