--- a/AntiqueBookstore/Views/Orders/Index.cshtml
+++ b/AntiqueBookstore/Views/Orders/Index.cshtml
@@ -26,10 +26,12 @@
     </div>
 }
 
+<h1>@ViewData["Title"]</h1>
+<hr />
+
 <div class ="row mb-3 align-items-start">
 
     <div class="col-md-6">
-        <h1>@ViewData["Title"]</h1>
         <p>
             <a asp-action="Create" class="btn btn-primary">Create New Order</a>
         </p>
@@ -51,7 +53,7 @@
 
 </div>
 
-<table class="table table-striped table-hover table-bordered">
+<table class="table table-striped table-hover">
 
     @* <thead class="thead-light">
         <tr>
