--- a/AntiqueBookstore/Views/Shared/_Layout.cshtml
+++ b/AntiqueBookstore/Views/Shared/_Layout.cshtml
@@ -1,5 +1,11 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@using AntiqueBookstore.Resources
+@using System.Globalization
+@using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<SharedResource> L
+
+<!DOCTYPE html>
+<html lang="@CultureInfo.CurrentUICulture.TwoLetterISOLanguageName">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,39 +30,39 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">@L["Nav_Home"]</a>
                         </li>
                         <li class="nav-item dropdown" >
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inventory</a>
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">@L["Nav_Inventory"]</a>
                             <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
                                 <li>
-                                    <a class="dropdown-item text-dark" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
+                                    <a class="dropdown-item text-dark" asp-area="" asp-controller="Authors" asp-action="Index">@L["Nav_Authors"]</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
+                                    <a class="dropdown-item text-dark" asp-area="" asp-controller="Books" asp-action="Index">@L["Nav_Books"]</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a> @* TBD: create manual crud *@
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">@L["Nav_Orders"]</a> @* manual crud *@
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a> @* TBD: create scaffolding crud *@
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">@L["Nav_Customers"]</a> @* scaffolded crud *@
                         </li>
 
                         @if (User.Identity != null && User.Identity.IsAuthenticated && User.IsInRole("Manager"))
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-dark" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Staff</a>
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">@L["Nav_Staff"]</a>
                                 <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
                                     <li>
-                                        <a class="dropdown-item text-dark" asp-area="" asp-controller="UserManagement" asp-action="Index">User Management</a>
+                                        <a class="dropdown-item text-dark" asp-area="" asp-controller="UserManagement" asp-action="Index">@L["Nav_User_Management"]</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employee Management</a>
+                                        <a class="dropdown-item text-dark" asp-area="" asp-controller="Employees" asp-action="Index">@L["Nav_Employee_Management"]</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item text-dark" asp-area="" asp-controller="Audit" asp-action="Index">Sales Audit</a>
+                                        <a class="dropdown-item text-dark" asp-area="" asp-controller="Audit" asp-action="Index">@L["Nav_Sales_Audit"]</a>
                                     </li>
                                 </ul>
                             </li>
@@ -80,7 +86,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Antique Bookstore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Antique Bookstore - <a asp-area="" asp-controller="Home" asp-action="Privacy">@L["Fot_Privacy"]</a>
         </div>
     </footer>
 
